--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,31 @@
 name: Continuous Integration
 
 on:
-  - push
+  push:
+    branches:
+      - main
 
 jobs:
   build:
+    permissions:
+      contents: read
+      issues: read
+      checks: write
+      pull-requests: write
+    
     runs-on: ubuntu-latest
 
     steps:
+
       # Installe java 8 sur l'agent
       - name: Set up JDK 8
         uses: actions/setup-java@v2
         with:
           java-version: '8'
           distribution: 'adopt'
+
+       - name: Standard Checkout
+        uses: actions/checkout@v2
 
       # Compile notre application
       - name: Build with Maven
